src/lexer/snapshots/python_lsp__lexer__tests__lex_soft_keywords.snap
---
source: src/lexer/mod.rs
expression: "LexerDebug::new(&lexer, source)"
---
[
    "match" SoftKeyword(Match) 0..5,
    "x" Id 6..7,
    ":" Colon 7..8,
    "\n" NewLine 8..9,
    "\t" Indent 9..10,
    "case" SoftKeyword(Case) 10..14,
    "None" Keyword(None) 15..19,
    ":" Colon 19..20,
    "\n" NewLine 20..21,
    "..." Ellipsis 22..25,
    "" NewLine 25..25,
    "" Dedent 25..25,
]
