src/lexer/snapshots/python_lsp__lexer__tests__lex_string_continuation_unix_eol.snap
---
source: src/lexer/mod.rs
expression: "LexerDebug::new(&lexer, &source)"
---
[
    "\"abc\\\ndef\"" String { kind: String, is_triple_quote: false } 0..10,
    "" NewLine 10..10,
]
