src/lexer/snapshots/python_lsp__lexer__tests__lex_string_continuation_windows_eol.snap
---
source: src/lexer/mod.rs
expression: "LexerDebug::new(&lexer, &source)"
---
[
    "\"abc\\\r\ndef\"" String { kind: String, is_triple_quote: false } 0..11,
    "" NewLine 11..11,
]
