src/lexer/snapshots/python_lsp__lexer__tests__lex_triple_quoted_unix_eol.snap
---
source: src/lexer/mod.rs
expression: "LexerDebug::new(&lexer, &source)"
---
[
    "\"\"\"\n test string\n \"\"\"" String { kind: String, is_triple_quote: true } 0..21,
    "" NewLine 21..21,
]
