src/lexer/snapshots/python_lsp__lexer__tests__lex_unclosed_square_bracket.snap
---
source: src/lexer/mod.rs
expression: "LexerDebug::new(&lexer, source)"
---
[
    "[" OpenBracket 0..1,
    "1" Number(Decimal) 1..2,
    "" NewLine 2..2,
]
