src/lexer/snapshots/python_lsp__lexer__tests__too_low_dedent.snap
---
source: src/lexer/mod.rs
expression: "LexerDebug::new(&lexer, source)"
---
[
    "if" Keyword(If) 0..2,
    "True" Keyword(True) 3..7,
    ":" Colon 7..8,
    "\n" NewLine 8..9,
    "    " Indent 9..13,
    "pass" Keyword(Pass) 13..17,
    "\n" NewLine 17..18,
    "  " Invalid unindent does not match any outer indentation level,
    "pass" Keyword(Pass) 20..24,
    "\n" NewLine 24..25,
]
